Bug 36387 - AND / OR show ERR:504 instead result for data from other document
Summary: AND / OR show ERR:504 instead result for data from other document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 Beta1
Hardware: All All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.5 target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-19 04:39 UTC by sasha.libreoffice
Modified: 2022-03-24 10:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
unzip contents to Windows to disk D, start file with formulas, refresh links when asked (15.30 KB, application/zip)
2011-09-12 08:21 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2011-04-19 04:39:18 UTC
In Calc functions can use data from other files. For example if we enter formula
=COUNT('file:///home/s/abc.ods'#$sheet1.C5:C10)
then this function will count numbers in file abc.ods.
Alas, not all formulas work with this.

How to use this:
Create spreadsheet and enter some numbers in adjaicent cells, then save this but not close. (or open existing spreadsheet with some numbers in adjaicent cells)
Then create second spreadsheet, type =c Enter, then switch to first document and select some cells with numbers and then switch to second document and press Enter. Appears number in cell. Functions sum, count works.

Problem:
Functions And, Median, Percentile and many others produces error: Err:504 or Err:508

produced on Libreoffice 3.3.2 on Mandriva 64 bit and windows XP 32 bit
Comment 1 Kohei Yoshida 2011-04-19 07:33:28 UTC
Please re-test this with 3.4 Beta when it's convenient.  The external reference has been reworked in 3.4, so there is a chance that this is already fixed in 3.4.  If not I'll go fix it.
Comment 2 sasha.libreoffice 2011-06-13 00:36:59 UTC
on LibO 3.4 on Mandriva 64 bit and Windows XP 32bit problem stil exist
Comment 3 Rainer Bielefeld Retired 2011-09-10 01:52:11 UTC
#sasha:
can you please attach a little test kit?
Comment 4 sasha.libreoffice 2011-09-12 08:21:17 UTC
Created attachment 51076 [details]
unzip contents to Windows to disk D, start file with formulas, refresh links when asked
Comment 5 sasha.libreoffice 2011-09-12 08:26:01 UTC
In LibreOffice 3.4.3 almost all works except functions AND, OR
We can count this bug as fixed (most functions I not tested yet)

PS: Thanks to developers! Function with problem is fixed, as I can see
Comment 6 Rainer Bielefeld Retired 2011-09-12 10:43:34 UTC
[Reproducible] with reporter's testkit and "LibreOffice 3.4.3 RC2 - WIN7 Home Premium (64bit) German UI [OOO340m1 (Build:302)]", A6 and A7 show "ERR:504" instead of result "TRUE". Same with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  d3d1481-3f8994a-2ba0a9f)]".

Works fine with OOo 3.3.

@Kohei:
Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 7 Björn Michaelsen 2011-12-23 13:25:32 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 8 sasha.libreoffice 2011-12-27 23:14:35 UTC
reproduced on LibO 3.5.0 beta1
Comment 9 Kohei Yoshida 2012-01-06 19:21:06 UTC
External references should now work with AND and OR. Please verify with 3.5 Beta3 when it's out.

http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=9199fedb8e20133782a081ac1c33a67d06dffbc6
Comment 10 sasha.libreoffice 2012-01-24 03:44:35 UTC
in LibO 3.5.0 beta 3 on Windows and in master on Fedora works correctly
Thanks for fix!
Comment 11 Commit Notification 2022-03-24 10:56:12 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6e3ed5559ad2c7e037d04b644801d7a4f48754a0

tdf#36387: sc_uicalc: Add unittest

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.