fdo#36387: Get external references to work with AND and OR.